--- a/TODO.txt
+++ b/TODO.txt
@@ -8,6 +8,7 @@
 - Scene
 	- Click on crate to zoom towards it
 	- Render actual crate mesh + textures
+	- Time trial viewer
 - Refactoring
 	- Refactor CrateDisplayWindow.UpdateState (Move state to LevelState?)
 - Features
